...
            "state" : "translated",
            "value" : "• 请勿与他人分享您的 Token"
          }
        }
      }
    },
    "Don't save" : {
      "comment" : "Don't save button",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "不保存"
          }
        }
      }
    },
    "Done" : {
      "comment" : "Done button",
...
            "state" : "translated",
            "value" : "Gists"
          }
        }
      }
    },
    "GitHub" : {
      "comment" : "Main screen title",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "GitHub"
...
            "state" : "translated",
            "value" : "登录中..."
          }
        }
      }
    },
    "Login" : {
      "comment" : "Login button",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "登录"
          }
        }
      }
    },
    "Login to GitHub" : {
      "comment" : "Login title",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "登录 GitHub"
          }
        }
      }
    },
    "Login with Biometry" : {
      "comment" : "Generic biometry login button",
...
            "state" : "translated",
            "value" : "使用 Touch ID 登录"
          }
        }
      }
    },
    "Logout" : {
      "comment" : "Logout button",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "退出"
          }
        }
      }
    },
    "Logout Confirmation" : {
      "comment" : "Logout alert title",
...
            "state" : "translated",
            "value" : "确定要退出登录吗？"
          }
        }
      }
    },
    "Me" : {
      "comment" : "Me tab title",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "我的"
          }
        }
      }
    },
    "My Repositories" : {
      "comment" : "My repositories section title",
...
            "state" : "translated",
            "value" : "读取用户邮箱地址"
          }
        }
      }
    },
    "Personal Access Token" : {
      "comment" : "Token field placeholder",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Personal Access Token"
...
            "state" : "translated",
            "value" : "请输入有效的 Personal Access Token"
          }
        }
      }
    },
    "Please enter your GitHub Personal Access Token" : {
      "comment" : "Token field placeholder",
      "localizations" : {
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "请输入您的 GitHub Personal Access Token"
          }
        }
      }
    },
    "Private" : {
      "comment" : "Private repository badge",
...
